fix nav spacing

--- a/site/src/layout/layout.css
+++ b/site/src/layout/layout.css
@@ -34,6 +34,10 @@ header {
   display: inline-block;
 }
 
+.name {
+  margin-right: 30px; 
+}
+
 .nav-elements ul {
   display: inline-block;
   justify-content: space-between;
@@ -47,6 +51,10 @@ header {
 header a {
   color: black;
   text-decoration: none;
+}
+
+.nav-elements ul {
+  padding-inline-start: 0px;
 }
 
 .nav-elements ul li:not(:last-child) {
@@ -78,4 +86,10 @@ header a {
 
 .name a.active{
   font-weight: 550;
+}
+
+@media (max-width: 600px) {
+  .name {
+    margin-right: 0px; 
+  }
 }
